Revision history for JSON-Schema-Draft201909

{{$NEXT}}
          - detect more cases of resource identifier collisions
          - fix resolution of relative $ids

0.012     2020-08-13 20:23:21Z
          - now using unicode semantics for pattern matching

0.011     2020-08-04 22:16:46Z
          - better normalization of uris in errors
          - now detecting infinite loops separately from deep traversal
          - optionally collect annotations
          - support for the "unevaluatedItems" and "unevaluatedProperties"
            keywords

0.010     2020-07-23 16:50:18Z
          - fixed error generation for validator keywords with numeric
            arguments (e.g. minimum, multipleOf)
          - new "get" method for fetching the schema found at a URI
          - improved "ipv6" format validation

0.009     2020-07-07 19:54:44Z
          - no longer allowing adding another schema document with a duplicate
            uri but different schema content (some collision checks were too
            lax).
          - fix behaviour of $recursiveRef without an $recursiveAnchor in the
            initial target scope

0.008     2020-06-22 04:24:06Z
          - fix bad syntax used in a test

0.007     2020-06-21 21:20:33Z
          - raise some inadequate prereq declarations
          - fix incorrect canonical uri when evaluating a (sub)schema using a
            non-canonical uri

0.006     2020-06-19 20:54:40Z
          - add support for evaluation against a uri
          - add "add_schema" interface for using additional schema documents
            within the implementation
          - support using the "format" keyword as an assertion, with the
            "validate_formats" option

0.005     2020-06-09 01:54:05Z
          - fix some edge cases with usage of $recursiveAnchor, $recursiveRef
          - fixed several issues with resource identification within schema
            documents

0.004     2020-06-02 19:14:32Z