@@ -36,7 +36,7 @@ use constant { true => JSON::PP::true, false => JSON::PP::false };
 
 has output_format => (
   is => 'ro',
-  isa => Enum[qw(flag basic detailed verbose)],
+  isa => Enum(JSON::Schema::Draft201909::Result->OUTPUT_FORMATS),
   default => 'basic',
 );
 
@@ -1740,7 +1740,7 @@ version of the specification.
 
 =head2 output_format
 
-One of: C<flag>, C<basic>, C<detailed>, C<verbose>. Defaults to C<basic>. Passed to
+One of: C<flag>, C<basic>, C<detailed>, C<verbose>, C<terse>. Defaults to C<basic>. Passed to
 L<JSON::Schema::Draft201909::Result/output_format>.
 
 =head2 short_circuit
